--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -26,12 +26,11 @@
     
     &-headline {
         font-size: 2.5rem;
-        color: orangered;
-        margin-top: -1.5rem;
+        //color: orangered;
         
         &--gradient {
             @include gradient-text;
-            outline: 2px solid $color-white;
+            outline: 3px solid orangered;
         }
         
         @include for-tablet-landscape-up {
